add performance testing